adding lesson number 2

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </li>
                 <li>
                     <p>
-                        <a href="">
+                        <a href="تحويل انواع البيانات.html">
                             تحويل انواع البيانات
                         </a>
                     </p>
