adding lesson number 3

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </li>
                 <li>
                     <p>
-                        <a href="">
+                        <a href="تمرين حول انواع البيانات .html">
                             تمرين حول انواع البيانات 
                         </a>
                     </p>
