adding lesson number 4

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </li>
                 <li>
                     <p>
-                        <a href="">
+                        <a href="العمليات الرياضية.html">
                             العمليات الرياضية
                         </a>
                     </p>
