adding lesson number 5

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </li>
                 <li>
                     <p>
-                        <a href="">
+                        <a href="bmi_calculator.html">
                             تمرين حساب ال 
                             Bmi
                         </a>
