adding lesson number 6

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </li>
                 <li>
                     <p>
-                        <a href="">
+                        <a href="f-string.html">
                             f-string
                         </a>
                     </p>
