adding lesson number 7

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </li>
                 <li>
                     <p>
-                        <a href="">
+                        <a href="تمرين عدد الاسابيع المتبقية.html">
                             تمرين عدد الاسابيع المتبقية
                         </a>
                     </p>
