adding lesson number 8

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </li>
                 <li>
                     <p>
-                        <a href="">
+                        <a href="برنامح حاسب الاكرامية.html">
                             برنامح حاسب الاكرامية
                         </a>
                     </p>
